@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-24T02:10:25Z",
+  "timestamp" : "2022-09-24T08:25:19Z",
   "count_outdated" : 2436,
   "uniques_outdated" : 605,
-  "count" : 2472,
-  "uniques" : 626,
+  "count" : 2473,
+  "uniques" : 627,
   "clones" : [
     {
       "timestamp": "2022-09-10T00:00:00Z",
@@ -100,6 +100,13 @@
       "timestamp": "2022-09-23T00:00:00Z",
       "count": 2,
       "count_minmax": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
