@@ -1,5 +1,5 @@
 {
-  "count": 36,
+  "count": 37,
   "uniques": 7,
   "clones": [
     {
@@ -70,6 +70,11 @@
     {
       "timestamp": "2022-09-23T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-24T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
