@@ -1,3 +1,11 @@
+2022-09-24T08:25:19Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3117642747
+* notice: last 14d: unq all: 7 37
+* notice: prev accum: outdated-unq outdated-all / unq all: 605 2436 / 626 2472
+* notice: next accum: outdated-unq outdated-all / unq all: 605 2436 / 627 2473
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-24]
+
 2022-09-24T02:10:25Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3116695690
 * notice: last 14d: unq all: 7 36
